force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <description>To Store booking details of the Customers</description>
    <label>Booking</label>
    <nameField>
        <displayFormat>BKID-{000}</displayFormat>
        <label>Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>