force-app/main/default/objects/Booking__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <description>Booking date of the passengers</description>
    <label>Booking Date</label>
    <type>DateTime</type>
</CustomField>