force-app/main/default/objects/Booking__c/fields/Booking_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Expiry_Date__c</fullName>
    <description>Passenger&apos;s booking expiry date</description>
    <label>Booking Expiry Date</label>
    <type>Date</type>
</CustomField>