force-app/main/default/objects/Booking__c/fields/Booking_notes__c.field-meta.xml
<CustomField>
    <fullName>Booking_notes__c</fullName>
    <description>Passengers booking information</description>
    <label>Booking Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>