force-app/main/default/objects/Booking__c/fields/Commision_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commision_Amount__c</fullName>
    <formula>(Travel_Amount__c * Commision_Percentage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commision Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>