force-app/main/default/objects/Booking__c/fields/Commision_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commision_Percentage__c</fullName>
    <description>Calculate percentage</description>
    <label>Commision Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>