force-app/main/default/objects/Booking__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount given to the passenger when total amount is paid and not for installments</description>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>