force-app/main/default/objects/Booking__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <description>Passenger&apos;s email id</description>
    <label>Email ID</label>
    <type>Email</type>
</CustomField>