force-app/main/default/objects/Booking__c/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <description>Passenger&apos;s emergency Contact</description>
    <label>Emergency Contact Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>