force-app/main/default/objects/Booking__c/fields/Emergency_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_No__c</fullName>
    <description>Emergency contact phone details of a passenger</description>
    <label>Emergency Contact No</label>
    <type>Phone</type>
</CustomField>