force-app/main/default/objects/Booking__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <description>To store passenger names</description>
    <label>Passenger Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>