force-app/main/default/objects/Booking__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <description>Passenger&apos;s Passport number</description>
    <label>Passport Number</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>