force-app/main/default/objects/Booking__c/fields/Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Phone_number__c</fullName>
    <description>Passenger&apos;s phone number</description>
    <label>Phone number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>