force-app/main/default/objects/Booking__c/fields/Preferred_Activities__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Activities__c</fullName>
    <description>Passengers travel spots</description>
    <label>Preferred Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sightseeing</fullName>
            </value>
            <value>
                <fullName>Adventure Sports</fullName>
            </value>
            <value>
                <fullName>Beach relaxation</fullName>
            </value>
            <value>
                <fullName>Cultural Tours</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Hiking</fullName>
            </value>
            <value>
                <fullName>Wildlife Safari</fullName>
            </value>
            <value>
                <fullName>Nightlife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>