force-app/main/default/objects/Booking__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Passenger&apos;s belonging state</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tamilnadu</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Westbengal</fullName>
            </value>
            <value>
                <fullName>Andhrapradesh</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Newyork</fullName>
            </value>
            <value>
                <fullName>Pennsylvania</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Ohio</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>Kanto</fullName>
            </value>
            <value>
                <fullName>Chubu</fullName>
            </value>
            <value>
                <fullName>Kansai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>