force-app/main/default/objects/Booking__c/fields/Travel_Accomodation__c.field-meta.xml
<CustomField>
    <fullName>Travel_Accomodation__c</fullName>
    <label>Travel Accomodation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>