force-app/main/default/objects/Booking__c/fields/Travel_Amount__c.field-meta.xml
<CustomField>
    <fullName>Travel_Amount__c</fullName>
    <description>Passenger&apos;s flight travel cost</description>
    <label>Travel Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>