force-app/main/default/objects/Booking__c/fields/Travel_Package__c.field-meta.xml
<CustomField>
    <fullName>Travel_Package__c</fullName>
    <label>Travel Package</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>