force-app/main/default/objects/Booking__c/fields/Type_of_Assistance_needed__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Assistance_needed__c</fullName>
    <description>for special assistance</description>
    <label>Type of Assistance needed</label>
    <type>TextArea</type>
</CustomField>