force-app/main/default/objects/Booking__c/fields/VIP_Customer__c.field-meta.xml
<CustomField>
    <fullName>VIP_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the passenger is VIP customer or not, one who travels frequently</description>
    <label>VIP Customer</label>
    <type>Checkbox</type>
</CustomField>