force-app/main/default/objects/Booking__c/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <description>Record type for Business People</description>
    <label>Business</label>
</RecordType>