force-app/main/default/objects/Booking__c/recordTypes/Domestic_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Domestic_Record_type</fullName>
    <active>true</active>
    <description>Record type for Domestic travellers</description>
    <label>Domestic Record type</label>
</RecordType>