force-app/main/default/objects/Booking__c/recordTypes/International_Record_type.recordType-meta.xml
<RecordType>
    <fullName>International_Record_type</fullName>
    <active>true</active>
    <description>Record type for International Travellers</description>
    <label>International Record type</label>
</RecordType>