force-app/main/default/objects/Booking__c/recordTypes/Senior_Citizen.recordType-meta.xml
<RecordType>
    <fullName>Senior_Citizen</fullName>
    <active>true</active>
    <description>Senior citizen record type</description>
    <label>Senior Citizen</label>
</RecordType>