force-app/main/default/objects/Booking__c/recordTypes/Tourists.recordType-meta.xml
<RecordType>
    <fullName>Tourists</fullName>
    <active>true</active>
    <description>Record type for Tourist</description>
    <label>Tourists</label>
</RecordType>