force-app/main/default/objects/Booking__c/validationRules/Commission_percentage_validity.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_percentage_validity</fullName>
    <active>true</active>
    <description>accept values upon booking confirmation</description>
    <errorConditionFormula>IF(
   NOT(ISNULL(Commision_Percentage__c )),
 IF((Booking_Confirmation__c  = FALSE),
TRUE,
FALSE),
FALSE
)</errorConditionFormula>
    <errorMessage>Booking is not confirmed yet</errorMessage>
</ValidationRule>