force-app/main/default/objects/Booking__c/validationRules/Discount_not_to_exceed_20.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_not_to_exceed_20</fullName>
    <active>true</active>
    <description>Discount limit is with 20%, should not exceed</description>
    <errorConditionFormula>Discount__c &gt; 0.2</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Discount cannot be greater than 20%</errorMessage>
</ValidationRule>