force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Special_Assistance__c</columns>
    <columns>Passenger_Name__c</columns>
    <columns>Phone_number__c</columns>
    <columns>Email_ID__c</columns>
    <columns>Passenger_Type__c</columns>
    <columns>Destination__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>VIP_Customer__c</columns>
    <columns>Booking_Confirmation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Booking__c.Senior_Citizen</value>
    </filters>
    <label>All</label>
</ListView>